tests/errors/preprocessor/russian_symbol_in_error/after_functionid_must_be_comma.c
#define ABC(первый_аргумент второй_аргумент) (первый_аргумент - второй_аргумент)

int main()
{
	int x, y;
	x = 1;
	y = 2;

	ABC(x, y);
	return 0;
}
